Fix project icon colors and prevent icon row wrapping

--- a/src/components/projectLanguages/ProjectLanguages.css
+++ b/src/components/projectLanguages/ProjectLanguages.css
@@ -1,17 +1,22 @@
 .dev-icons-languages {
   padding-left: 0;
   list-style: none;
-  font-size: 2rem;
+  font-size: 1.6rem;
   margin-bottom: 0px;
   margin-top: 0px;
   text-align: right;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .software-skill-inline-languages {
   display: inline-block;
-  margin-right: 20px;
+  margin-right: 12px;
   margin-bottom: 0px;
   font-family: "Google Sans Regular";
+  flex-shrink: 0;
 }
 
 @media (max-width: 768px) {
